Fix Hero Section height on Mobile

--- a/src/component/AboutMe/AboutMe.scss
+++ b/src/component/AboutMe/AboutMe.scss
@@ -1,5 +1,4 @@
 .aboutme {
-    padding-top: 3rem ;
     margin: 0 auto;
     max-width:1024px;
     color: #fff;
