--- a/src/component/HeroPage/HeroPage.scss
+++ b/src/component/HeroPage/HeroPage.scss
@@ -6,7 +6,8 @@
     margin: auto;
 }
 .hero{
-  padding: 3rem 1rem;
+  height: calc(100dvh - 200px);
+  padding: 3rem 1rem 0;
 }
 .nameHi {
     color: #fff;
